--- a/pom.xml
+++ b/pom.xml
@@ -74,12 +74,18 @@
             <version>${jersey.version}</version>
         </dependency>
 
-
         <!--<dependency>-->
             <!--<groupId>org.glassfish.jersey.media</groupId>-->
             <!--<artifactId>jersey-media-json-jackson</artifactId>-->
             <!--<version>2.15</version>-->
         <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
