--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.epam.note</groupId>
-    <artifactId>note</artifactId>
+    <groupId>com.epam.noteRest</groupId>
+    <artifactId>noteRest</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>note Maven Webapp</name>
+    <name>noteRest Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
         <jersey.version>1.18.1</jersey.version>
@@ -89,7 +89,7 @@
     </dependencies>
 
     <build>
-        <finalName>note</finalName>
+        <finalName>noteRest</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
