--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>noteRest</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>noteRest Maven Webapp</name>
+    <name>Note App</name>
     <url>http://maven.apache.org</url>
     <properties>
         <jersey.version>1.18.1</jersey.version>
@@ -89,7 +89,7 @@
     </dependencies>
 
     <build>
-        <finalName>noteRest</finalName>
+        <finalName>WebNote</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
