--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/notes
+url=jdbc:mysql://localhost:3306/notes1
 user=root
 password=root
